# CorridorKey-Cloud

./: .gitignore  README.md  device_utils.py  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: docker-node.yml  docker.yml  release-node.yml
CorridorKeyModule/: backend.py  inference_engine.py
CorridorKeyModule/core/: color_utils.py
backend/: clip_state.py  ffmpeg_tools.py  job_queue.py  project.py  service.py
deploy/: .env.example  .env.supabase.example  Caddyfile  DEPLOY.md  backup-db.sh  backup.sh  create-admin.sh  dev-down.sh  dev-up.sh  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.node.yml  docker-compose.reload.yml  docker-compose.supabase.yml  docker-compose.web.yml  node-down.sh  node-up.sh  prod-down.sh  prod-up.sh  restore-db.sh
deploy/monitoring/grafana/dashboards/: log-explorer.json  node-detail.json  platform-overview.json
deploy/scripts/: generate-keys.sh
deploy/scripts/db/: init-db.sql  init-passwords.sh  init-roles.sql
gvm_core/: wrapper.py
tests/: test_cas.py  test_color_utils.py  test_device_utils.py  test_exr_gamma_bug_condition.py  test_exr_gamma_preservation.py  test_gpu_credits.py  test_job_isolation.py  test_metrics.py  test_node_verify_output.py  test_org_isolation.py  test_pyproject_structure.py  test_redis_state.py
web/: Dockerfile.dev  Dockerfile.node  Dockerfile.nodearm64  Dockerfile.web
web/api/: api_version.py  app.py  audit.py  auth.py  clip_retention.py  credit_scheduler.py  database.py  email.py  gpu_credits.py  gpu_pool.py  ip_allowlist.py  metrics.py  node_reputation.py  node_tokens.py  nodes.py  org_isolation.py  org_prefs.py  orgs.py  rate_limit.py  reaper.py  redis_client.py  redis_state.py  result_verification.py  schemas.py  sentry_setup.py  status.py  storage_quota.py  tier_limits.py  users.py  worker.py  ws.py
web/api/migrations/versions/: 001_initial_schema.py  002_audit_log.py  003_gpu_credits_org.py  004_node_tokens.py  005_verification_jobs.py  006_orgs_tables.py  007_node_reputations.py  009_ip_allowlist.py  010_org_preferences.py  013_credit_grants.py  014_node_transfer_speed.py
web/api/routes/: admin.py  auth.py  jobs.py  nodes.py  nodes_mgmt.py  orgs.py  preview.py  system.py  upload.py
web/frontend/: vite.config.ts
web/frontend/src/: app.html
web/frontend/src/components/: FrameViewer.svelte  GuidedTour.svelte  JobRow.svelte  ProgressBar.svelte  WelcomeCard.svelte
web/frontend/src/lib/: api.ts  auth.ts
web/frontend/src/lib/stores/: nodes.ts  orgs.ts  settings.ts
web/frontend/src/routes/: +layout.svelte  +page.svelte
web/frontend/src/routes/admin/: +layout.svelte  +page.svelte
web/frontend/src/routes/admin/audit/: +page.svelte
web/frontend/src/routes/admin/system/: +page.svelte
web/frontend/src/routes/admin/users/: +page.svelte
web/frontend/src/routes/clips/: +page.svelte
web/frontend/src/routes/clips/[name]/: +page.svelte
web/frontend/src/routes/jobs/: +page.svelte
web/frontend/src/routes/login/: +page.svelte
web/frontend/src/routes/nodes/: +page.svelte
web/frontend/src/routes/nodes/setup/: +page.svelte
web/frontend/src/routes/pending/: +page.svelte
web/frontend/src/routes/privacy/: +page.svelte
web/frontend/src/routes/profile/: +page.svelte
web/frontend/src/routes/settings/: +page.svelte
web/frontend/src/routes/signup/: +page.svelte
web/frontend/src/routes/terms/: +page.svelte
web/node/: __main__.py  agent.py  config.py  corridorkey-node.spec  corridorkey_node_main.py  file_transfer.py  first_run.py  generate_icons.py  gpu_addon.py  gui.py  install.sh  installer.iss  node.env.example  pyi_rth_rocm.py  tray.py  updater.py  weight_sync.py
