[project]
name = "corridorkey"
version = "1.0.0"
description = "Neural network green screen keying for professional VFX pipelines"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Corridor Digital" }]

dependencies = [
    # Core inference
    # NOTE: torch and torchvision are intentionally NOT listed here.
    #
    # They must be supplied by one of the hardware extras below, or — when
    # building against the NVIDIA PyTorch container — they are already present
    # in the system Python and are injected into the venv via
    # --system-site-packages.  Pinning them here would cause uv to attempt a
    # re-install from PyPI and conflict with whatever the container ships.
    #
    #   Standalone CUDA:       uv sync --extra cuda
    #   ROCm / AMD:            uv sync --extra rocm
    #   NVIDIA container:      uv sync  (no extra; torch comes from system)
    "timm==1.0.24",
    "numpy",
    "opencv-python",
    "tqdm",
    "setuptools",
    # Triton fix for Windows (conditional, won't install on Linux/aarch64)
    "triton-windows==3.4.0.post21 ; sys_platform == 'win32'",
    # GVM alpha hint generator
    #pinned for aarch64 support
    "diffusers>=0.27",
    "transformers",
    "accelerate",
    "peft>=0.17.0",
    "av",
    "Pillow",
    "PIMS",
    "easydict",
    "imageio",
    "matplotlib",
    # VideoMaMa alpha hint generator
    "einops",
    # BiRefNet alpha hint generator
    "kornia",
    # CLI tools (huggingface-hub is also a transitive dep, but must be direct
    # so that uv installs the "hf" console-script entry point)
    "huggingface-hub>=0.23",
    # CLI framework + terminal output
    "typer>=0.12",
    "rich>=13",
    # Node agent (HTTP client, config, system stats)
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psutil>=5.9",
    # Node tray app (optional — degrades gracefully if missing)
    "pystray>=0.19",
    "desktop-notifier>=5.0",
]

[project.optional-dependencies]
# Standalone CUDA build (pulls wheels from the PyTorch CUDA index).
# Used by the uv-base Dockerfile path and local developer installs.
cuda = [
    "torch==2.8.0",
    "torchvision==0.23.0",
]
mlx = [
    "corridorkey-mlx ; python_version >= '3.11'",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.9",
    "PyJWT>=2.8",
    "sentry-sdk[fastapi]>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
]
rocm = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pytorch-triton-rocm==3.4.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
]
s3 = [
    "boto3>=1.34",
]
# Marker extra for the NVIDIA-container build path.
# No packages — torch/torchvision come from the container's system Python and
# are visible through --system-site-packages.  Declaring this extra lets CI
# and humans signal intent without accidentally pulling PyPI torch.
system-torch = []

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "hypothesis", "fakeredis[lua]"]
docs = ["zensical>=0.0.24"]

[project.scripts]
corridorkey = "corridorkey_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["CorridorKeyModule", "gvm_core", "VideoMaMaInferenceModule"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["gvm_core/", "VideoMaMaInferenceModule/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.format]
# Third-party code excluded via top-level exclude

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires CUDA GPU (skipped in CI)",
    "slow: long-running test",
    "mlx: requires Apple Silicon with MLX installed",
]
env = ["OPENCV_IO_ENABLE_OPENEXR=1"]
addopts = "--tb=short"

[tool.coverage.run]
branch = true
source = ["CorridorKeyModule", "."]
omit = [
    "gvm_core/*",
    "VideoMaMaInferenceModule/*",
    "tests/*",
    "test_vram.py",
]

[tool.uv]
# Guard against transitive deps (diffusers, imageio, PIMS) silently pulling in
# opencv-python-headless, which conflicts with opencv-python at the file level.
constraint-dependencies = [
    "opencv-python-headless==99999",
]
conflicts = [
    [
        { extra = "cuda" },
        { extra = "mlx" },
        { extra = "rocm" },
        { extra = "system-torch" },
    ],
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
extra = "cuda"

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
extra = "rocm"

[tool.uv.sources]
# Hiera fix for FlashAttention kernel
timm = { git = "https://github.com/Raiden129/pytorch-image-models-fix", branch = "fix/hiera-flash-attention-global-4d" }
torch = [
    { index = "pytorch", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" },
]
torchvision = [
    { index = "pytorch", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = { index = "pytorch-rocm", extra = "rocm" }
corridorkey-mlx = { git = "https://github.com/nikopueringer/corridorkey-mlx.git", extra = "mlx" }
